Disable Youtube OAuth2

--- a/application.yml.example
+++ b/application.yml.example
@@ -9,7 +9,7 @@ plugins:
     enabled: true
     oauth:
       # setting "enabled: true" is the bare minimum to get OAuth working.
-      enabled: true
+      enabled: false
 
       # if you have a refresh token, you may set it below (make sure to uncomment the line to apply it).
       # setting a valid refresh token will skip the OAuth flow entirely. See above note on how to retrieve
