--- a/application.yml.example
+++ b/application.yml.example
@@ -23,10 +23,15 @@ plugins:
 
 lavalink:
   plugins:
-    # Downloading Youtube Plugin version 1.11.2
-    - dependency: "dev.lavalink.youtube:youtube-plugin:1.11.2"
-      # snapshot: true # Set to true if you want to use a snapshot version.
-      snapshot: false
+    # Downloading Youtube Plugin version 1.12.0
+    # Do not download through Github Releases.
+    # at 30/03/2025 - There's an issue about signature decipher ("Must find actions from script.", "Must find decipher function from script.", "Not success status code: 403")
+    # - dependency: "dev.lavalink.youtube:youtube-plugin:VERSION"
+    - dependency: "dev.lavalink.youtube:youtube-plugin:1.12.0"
+    
+    # Snapshot versions are not recommended for production use.
+    # - dependency: "dev.lavalink.youtube:youtube-plugin:SnapshotVERSION"
+      # snapshot: false # Set to true if you want to use a snapshot version.
 
       youtube:
         enabled: true # Whether this source can be used.
